--- a/app/src/main/res/layout/activity_logo_main.xml
+++ b/app/src/main/res/layout/activity_logo_main.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LogoMain">
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/dish_nhatban"/>
+        android:text="logo"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
