--- a/app/src/main/res/layout/activity_logo_main.xml
+++ b/app/src/main/res/layout/activity_logo_main.xml
@@ -9,6 +9,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:src="@drawable/dish_nhatban"/>
 
 </LinearLayout>
