--- a/app/src/main/res/layout/activity_logo_main.xml
+++ b/app/src/main/res/layout/activity_logo_main.xml
@@ -6,10 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LogoMain">
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="logo"
-        android:layout_gravity="center"/>
+        android:text="hihi"/>
 
 </LinearLayout>
